--- a/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/fibre-stock.component.html
@@ -99,7 +99,7 @@
           <ng-container matColumnDef="receivedDCNo">
             <th mat-header-cell *matHeaderCellDef>ReceivedDC No</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.receivedDCNo }}
+              {{ element.receivedDCNo || "_" }}
             </td>
           </ng-container>
 
