--- a/src/app/components/purchases/fibre/fibre-stock/stock-details/stock-details.component.html
+++ b/src/app/components/purchases/fibre/fibre-stock/stock-details/stock-details.component.html
@@ -12,7 +12,7 @@
     </div>
     <div>
       <div class="text-dark pb-2">Received DC No</div>
-      <div>{{ fibreStock.receivedDCNo }}</div>
+      <div>{{ fibreStock.receivedDCNo || "_" }}</div>
     </div>
     <div>
       <div class="text-dark pb-2">Received Date</div>
