Updated time format hint in timesheet

--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -76,7 +76,7 @@
             name="timeIn"
             required
           />
-          <mat-hint>hh:mm AM/PM</mat-hint>
+          <mat-hint>hh:mm</mat-hint>
           <mat-error>This field is required.</mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill" class="ml-40 w-15">
@@ -112,7 +112,7 @@
             name="timeOut"
             required
           />
-          <mat-hint>hh:mm AM/PM</mat-hint>
+          <mat-hint>hh:mm</mat-hint>
           <mat-error>This field is required.</mat-error>
         </mat-form-field>
         <button
