--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -61,14 +61,14 @@
                 <mat-datepicker #timeInpicker></mat-datepicker>
                 <mat-hint>DD/MM/YYYY</mat-hint>
                 <mat-error *ngIf="timeInDate?.hasError('required')">
-                  Enter valid date.</mat-error
+                  Please enter valid date.</mat-error
                 >
                 <mat-error
                   *ngIf="
                     timeInDate?.hasError('matDatepickerMin') ||
                     timeInDate?.hasError('matDatepickerMax')
                   "
-                  >Select {{ getMinMonth() }} month
+                  >Select <strong>{{ getMinMonth() }}</strong> month only
                 </mat-error>
               </mat-form-field>
               <mat-form-field appearance="fill" class="w-35 ml-4">
@@ -109,10 +109,10 @@
                 <mat-datepicker #timeOutpicker></mat-datepicker>
                 <mat-hint>DD/MM/YYYY</mat-hint>
                 <mat-error *ngIf="timeOutDate?.hasError('required')">
-                  Enter valid date.</mat-error
+                  Please enter valid date.</mat-error
                 >
                 <mat-error *ngIf="timeOutDate?.hasError('matDatepickerMin')"
-                  >Greater than Time In.
+                  >Should be greater than Time In date.
                 </mat-error>
               </mat-form-field>
               <mat-form-field appearance="fill" class="ml-4 w-35">
@@ -161,7 +161,11 @@
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          <tr
+            mat-row
+            *matRowDef="let row; columns: displayedColumns"
+            class="record-row"
+          ></tr>
           <tr class="mat-row" *matNoDataRow>
             <td
               class="mat-cell no-rows"
