--- a/src/app/components/employee/timesheet/timesheet.component.html
+++ b/src/app/components/employee/timesheet/timesheet.component.html
@@ -176,7 +176,7 @@
         </table>
         <mat-paginator
           *ngIf="timesheetEntries.data.length"
-          [pageSizeOptions]="[25, 50, 100, 250]"
+          [pageSizeOptions]="[10, 25, 50, 100, 250]"
           aria-label="Select page of records"
         ></mat-paginator>
       </form>
